修复默认值解析