@@ -1,6 +1,7 @@
 package cn.toutatis.xvoid.axolotl.excel.support.adapters;
 
 import cn.toutatis.xvoid.axolotl.excel.ReaderConfig;
+import cn.toutatis.xvoid.axolotl.excel.constant.AxolotlDefaultConfig;
 import cn.toutatis.xvoid.axolotl.excel.constant.EntityCellMappingInfo;
 import cn.toutatis.xvoid.axolotl.excel.constant.RowLevelReadPolicy;
 import cn.toutatis.xvoid.axolotl.excel.support.CastContext;
@@ -52,10 +53,15 @@ public class DefaultStringAdapter extends AbstractDataCastAdapter<String> implem
                     if (readerConfig.getReadPolicyAsBoolean(RowLevelReadPolicy.CAST_NUMBER_TO_DATE)) {
                         if (DateUtil.isCellDateFormatted(cellGetInfo.get_cell())) {
                             cellValue = Time.regexTime(context.getDataFormat(), DateUtil.getJavaDate((Double) cellValue));
+                            yield "%s".formatted(cellValue);
                         }
                     }
                 }
-                yield "%s".formatted(cellValue);
+                if ((Double) cellValue % 1 == 0){
+                    yield ((Double) cellValue).intValue()+"";
+                }else {
+                    yield String.format("%."+ AxolotlDefaultConfig.XVOID_DEFAULT_DECIMAL_SCALE +"f", (Double) cellValue);
+                }
             }
             case BOOLEAN, FORMULA -> cellValue.toString();
             default -> null;
